[dependencies]
clap = '3.0.0-beta.5'
gnuplot = '0.0.37'
num-complex = '0.4.0'
num-traits = '0.2.14'
rustfft = '6.0.1'
special = '0.8.1'
ndarray-npy = {version="0.8.1", default-features = true}
itertools-num='0.1.3'
serde_yaml = '0.8.21'
serde = { version = "1.0", features = ["derive"] }
rayon='1.5.1'

[dependencies.ndarray]
features = ['rayon']
version = '0.15.3'

[package]
authors = ['GU Junhua <jhgu@nao.cas.cn>']
edition = '2021'
name = 'rspfb'
version = '0.1.0'
